test/success/integration/_succ_value_list_1.hs
main = do
       let x :: [Int]; x = [1,2]
       print "hello"