test/fail/integration/_fail_grammar_expr_elem_1.hs
x :: Int
x = elem []
main = print "hello"